Content aligning is static description page fixed to center

--- a/components/staticDescription/staticDescription.module.scss
+++ b/components/staticDescription/staticDescription.module.scss
@@ -31,6 +31,8 @@
 
 
 .modal {
+    @include flex-col(0,center ,center );
+
     width: 100vw;
     transition: all ease 0.4s;
     
